fix(OutputDisplay.jsx) fix open close with overflow / no overflow

--- a/src/components/parts/LearnBox.css
+++ b/src/components/parts/LearnBox.css
@@ -83,11 +83,16 @@
 	height: 100%;
 	background: #E8E4E4;
 	overflow: auto; 
-	background: green;
+}
+
+.learn-box-body-closing,
+.learn-box-body-closed {
+	overflow: hidden;
 }
 
 .learn-box .content-container {
 	width: 100%;   
+	height: 100%;
 	transition: height 3s;  
 }
 
