--- a/src/components/parts/OutputDisplay.css
+++ b/src/components/parts/OutputDisplay.css
@@ -6,14 +6,14 @@
 }
 
 /* =============== Display Box Container =============== */
-.output-display .display-box-container {
+/*.output-display .display-box-container {
 	width: 100%;
 	height: 100%;
 	background: #E8E4E4;
 	background: red;
 	overflow: hidden;
 }
-
+*/
 /*.output-display .display-box-container-animating {
 	overflow: hidden;
 }
@@ -23,7 +23,7 @@
 }*/
 
 /* =============== Display Box =============== */
-.output-display .display-box {
+.display-box {
 	width: 100%;
 	height: 100%;
 	position: relative;
@@ -34,24 +34,38 @@
 	z-index: 9000;
 }
 
-.output-display .display-box-init {
+.display-box-init {
 	height: 100%;
 	width: 100%; 
 }
 
-.output-display .display-box-animating {
+/*.display-box-animating {
 	resize: none;
 	max-width: 100%;
 	max-height: 100%;
-}
+}*/
 
-.output-display .display-box-animating-overflow-closing {
+.display-box-animating-closing {
 	resize: none;
 	max-width: 100%;
 	max-height: 100%;
 } 
 
-.output-display .display-box-animating-overflow-opening {
+.display-box-animating-opening {
+	resize: none;
+	max-width: none;
+	max-height: none;
+	width: none;
+	height: none;
+} 
+/*
+.display-box-animating-closing-overflow {
+	resize: none;
+	max-width: 100%;
+	max-height: 100%;
+} */
+
+.display-box-animating-overflow-opening {
 	resize: none;
 	max-width: none;
 	max-height: none;
@@ -59,6 +73,6 @@
 	height: none;
 }
 
-.output-display .display-box-transition {
+.display-box-transition {
 	transition: width 5s, height 5s; 
 }
